# cancomponent-rs

cc-core/: Cargo.toml
cc-core/src/: button_message.rs  can_message_type.rs  device_type.rs  extension.rs  lib.rs  relais_message.rs
cc-hardware/: Cargo.toml  build.rs
cc-hardware/src/: button.rs  can.rs  config.rs  device.rs  echo_guard.rs  lib.rs  relais.rs  relais_manager.rs  update.rs
