[package]
edition = "2021"
name    = "cancomponents"
version = "0.1.0"
build = "build.rs"

[[bin]]
name = "cancomponents"
path = "./src/bin/main.rs"

[features]
default = ["std"]
std = []

[dependencies]
critical-section    = { version = "1.2" }
esp-hal             = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-println         = { version = "0.14", features = ["esp32"] }
esp-backtrace       = { version = "0.16", features = ["esp32","println","panic-handler", "exception-handler"] }
esp-hal-ota         = { version = "0.4", features = ["esp32"] }
esp-storage         = { version = "0.6", features = ["esp32"] }
nb                  = { version = "1.1" }
embassy-executor    = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-sync        = { version = "0.6" }
embassy-time        = { version = "0.4" }
embassy-futures     = { version = "0.1" }
embassy-embedded-hal = { version = "0.3" }
esp-hal-embassy     = { version = "0.8", features = ["esp32"] }
embedded-can        = { version = "0.4" }
static_cell         = { version = "2.1", features = ["nightly"] }
heapless            = { version = "0.8" }
async-trait         = { version = "0.1" }
sequential-storage  = { version = "4.0" }
num_enum            = { version = "0.7", default-features = false }
cancomponents-core  = { path = "../cc-core/" }
thiserror           = { version = "2", default-features = false }

[build-dependencies]
vergen-git2         = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = false
